--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -219,8 +219,8 @@
       "unavailable": "We couldn't find the audiobook for this book.",
       "unsupported": "Your browser does not support audio playback.",
       "speed": "Speed",
-      "play": "Play",
-      "pause": "Pause",
+      "play": "Play ▶\uFE0F",
+      "pause": "Pause ⏸\uFE0F",
       "seek": "Seek position",
       "shareFromCurrent": "From current position?",
       "seekBackward": "Rewind {{seconds}}s",
