--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -214,8 +214,8 @@
       "unavailable": "Не удалось найти аудиоверсию этой книги.",
       "unsupported": "Ваш браузер не поддерживает воспроизведение аудио.",
       "speed": "Скорость",
-      "play": "Слушать",
-      "pause": "Пауза",
+      "play": "Слушать ▶\uFE0F",
+      "pause": "Пауза ⏸\uFE0F",
       "seek": "Позиция воспроизведения",
       "shareFromCurrent": "С текущей точки?",
       "seekBackward": "Отмотать на {{seconds}} с",
