--- a/src/shared/config/i18n/locales/uk/translation.json
+++ b/src/shared/config/i18n/locales/uk/translation.json
@@ -219,8 +219,8 @@
       "unavailable": "Аудіокнигу не знайдено.",
       "unsupported": "Ваш браузер не підтримує відтворення аудіо.",
       "speed": "Швидкість",
-      "play": "Відтворити",
-      "pause": "Пауза",
+      "play": "Відтворити ▶\uFE0F",
+      "pause": "Пауза ⏸\uFE0F",
       "seek": "Перехід",
       "shareFromCurrent": "З поточної точки?",
       "seekBackward": "Назад на {{seconds}}с",
