Add custom chapter modal for reader

--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -620,6 +620,10 @@
   "reading-overlay": {
     "toggle-font-size": "Font-size",
     "chapters": "Chapters",
+    "chaptersLoading": "Loading chapters…",
+    "noChapters": "No chapters available",
+    "closeChapters": "Close",
+    "chapterUnnamed": "Untitled chapter",
     "selectionTitle": "Share this excerpt",
     "shareSelection": "Share",
     "clearSelection": "Clear"
