--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -457,9 +457,10 @@
         },
         "audiobook": {
           "label": "Аудиокнига (необязательно)",
-          "cta": "Загрузить аудио",
+          "cta": "Добавить аудио версию",
           "placeholder": "Аудиофайл не выбран",
-          "hint": "MP3, WAV или M4A до 3 ГБ"
+          "hint": "MP3, WAV или M4A до 3 ГБ",
+          "remove": "Убрать"
         },
         "file": {
           "label": "PDF-файл",
