--- a/src/shared/config/i18n/locales/uk/translation.json
+++ b/src/shared/config/i18n/locales/uk/translation.json
@@ -453,9 +453,10 @@
         },
         "audiobook": {
           "label": "Аудіокнига (опціонально)",
-          "cta": "Завантажити аудіо",
+          "cta": "Додати аудіо версію",
           "placeholder": "Аудіо не вибрано",
-          "hint": "Підтримка MP3, WAV, M4A до 3 ГБ."
+          "hint": "Підтримка MP3, WAV, M4A до 3 ГБ.",
+          "remove": "Припрати"
         },
         "file": {
           "label": "Файл EPUB",
