Add modal-based audiobook voice selector

--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -214,6 +214,9 @@
       "unavailable": "Не удалось найти аудиоверсию этой книги.",
       "unsupported": "Ваш браузер не поддерживает воспроизведение аудио.",
       "speed": "Скорость",
+      "voice": "Озвучка",
+      "voiceDefault": "Основная озвучка",
+      "voiceOption": "Озвучка {{index}}",
       "play": "Слушать ▶\uFE0F",
       "pause": "Пауза ⏸\uFE0F",
       "seek": "Позиция воспроизведения",
