--- a/src/shared/config/i18n/locales/uk/translation.json
+++ b/src/shared/config/i18n/locales/uk/translation.json
@@ -219,6 +219,9 @@
       "unavailable": "Аудіокнигу не знайдено.",
       "unsupported": "Ваш браузер не підтримує відтворення аудіо.",
       "speed": "Швидкість",
+      "voice": "Озвучення",
+      "voiceDefault": "Основне озвучення",
+      "voiceOption": "Озвучення {{index}}",
       "play": "Відтворити ▶\uFE0F",
       "pause": "Пауза ⏸\uFE0F",
       "seek": "Перехід",
