--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -219,6 +219,9 @@
       "unavailable": "We couldn't find the audiobook for this book.",
       "unsupported": "Your browser does not support audio playback.",
       "speed": "Speed",
+      "voice": "Voice",
+      "voiceDefault": "Default voice",
+      "voiceOption": "Voice {{index}}",
       "play": "Play ▶\uFE0F",
       "pause": "Pause ⏸\uFE0F",
       "seek": "Seek position",
