--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -8,7 +8,7 @@
   },
   "splashScreen": {
     "title": "Цифровая Книжная Полка",
-    "decentralizedBy": "текстовые и аудио форматы"
+    "subtitle": "текстовые и аудио форматы"
   },
   "languages": {
     "en": "Английский",
