--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -146,6 +146,7 @@
       "showMore": "Show more"
     },
     "reviewsSection": "Reviews",
+    "free": "Free \uD83C\uDD93",
     "similarSection": "Similar books",
     "similarEmptyTitle": "Nothing to recommend yet",
     "similarEmptyDescription": "We are working on recommendations",
