--- a/src/shared/config/i18n/locales/uk/translation.json
+++ b/src/shared/config/i18n/locales/uk/translation.json
@@ -140,6 +140,7 @@
     "coverAlt": "Обкладинка книги {{title}}",
     "fallbackCategoryTitle": "Категорія",
     "share": "Поділитися",
+    "free": "Безкоштовно \uD83C\uDD93",
     "description": {
       "title": "Опис",
       "showLess": "Показати менше",
